feat: add some new styles

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>CV</h1>
     </header>
 
-    <main class="main">
-        <section>
+    <main>
+        <section class="main">
             <div>
                 <ul>
                     <li>
@@ -47,7 +47,7 @@
     </main>
 
     <footer>
-        <section>
+        <section class="footer">
             <p>Walleriy Stepanenko 2020</p>
         </section>
     </footer>
